# ir-imitator

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
esp8266-ir-sender/: esp8266-ir-sender.ino  wificred.example.h
example-configuration/: ir-remote.xml
example-configuration/hk9475/: 1_bright.csv  1_bright.csv.0.json  1_bright.csv.1.json  1_bright.csv.10.json  1_bright.csv.2.json  1_bright.csv.3.json  1_bright.csv.4.json  1_bright.csv.5.json  1_bright.csv.6.json  1_bright.csv.7.json  1_bright.csv.8.json  1_bright.csv.9.json  1_brightness_adjustment.csv  1_brightness_adjustment.csv.0.json  1_brightness_adjustment.csv.1.json  1_brightness_adjustment.csv.2.json  1_chill.csv  1_chill.csv.0.json  1_chill.csv.1.json  1_chill.csv.2.json  1_chill.csv.3.json  1_chill.csv.4.json  1_chill.csv.5.json  1_chill.csv.6.json  1_chill.csv.7.json  1_cool.csv  1_cool.csv.0.json  1_cool.csv.1.json  1_cool.csv.2.json  1_cool.csv.3.json  1_cool.csv.4.json  1_cool.csv.5.json  1_dark.csv  1_dark.csv.0.json  1_dark.csv.1.json  1_dark.csv.2.json  1_dark.csv.3.json  1_dark.csv.4.json  1_dark.csv.5.json  1_dark.csv.6.json  (+341 more)
example-configuration/re0208/: 1_darken.csv  1_darken.csv.0.json  1_darken.csv.1.json  1_darken.csv.2.json  1_darken.csv.3.json  1_darken.csv.4.json  1_darken.csv.5.json  1_darken.csv.6.json  1_darken.csv.7.json  1_darken.csv.8.json  (+75 more)
ir-signal-extractor/: Cargo.toml
ir-signal-extractor/src/: analyzer.rs  main.rs  saleae_csv.rs
model/: Cargo.toml
web-ir-remote/: Cargo.toml
web-ir-remote/assets/: index.html
web-ir-remote/src/: config.rs  main.rs
(+1 files in other folders)
