[package]
name = "ir-signal-extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
csv = { version = "1.3.1" }
iso8601-timestamp = { version = "0.3.3", default-features = false, features = ["std"] }
itertools = "0.14.0"
strum = { version = "0.26.3", features = ["derive"] }
serde_json = "1.0.140"

model = { path = "../model" }
