[package]
name = "ir-signal-extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
csv = { version = "1.3.1" }
iso8601-timestamp = { version = "0.4.0", default-features = false, features = ["std"] }
itertools = "0.14.0"
serde_json = "1.0.140"
strum = { version = "0.27.0", features = ["derive"] }

model = { path = "../model" }
