[package]
name = "web-ir-remote"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["query"] }
clap = { version = "4.5.35", features = ["derive", "env"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "net", "rt-multi-thread", "time"] }
toml = "0.8.20"

model = { path = "../model" }
serde-xml-rs = "0.7.0"
